# kabegami

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: random_wallpaper.rs
src/: cli.rs  error.rs  lib.rs  main.rs  utils.rs  win32.rs  windows.rs
src/image_utils/: image_modes.rs  mod.rs
src/linux/: default_command.rs  desktop_env.rs  mod.rs  utils.rs
src/linux/scripts/: cinnamon_setter.sh  gnome_setter.sh  kde_setter.sh  lxde_setter.sh  lxqt_setter.sh  mate_setter.sh  xfce_setter.sh
src/linux/xcb/: image_parser.rs  mod.rs
src/xcb/: image_parser.rs  mod.rs
wall/: Cargo.toml  README.md
wall/src/: lib.rs
wall/src/windows/: mod.rs  windows.rs
wall/src/xlib/: display_data.rs  image_data.rs  mod.rs  xlib.rs
waraq/: Cargo.toml  README.md
waraq/src/: error.rs  lib.rs
waraq/src/image_utils/: image_modes.rs  image_parser.rs  mod.rs
waraq/src/linux/: mod.rs  xcb.rs
waraq/src/windows_api/: mod.rs
waraq/src/xcb/: image_parser.rs  mod.rs  xcb.rs
