[package]
name = "kabegami"
version = "0.2.0"
authors = ["Nadji Abidi <mouhamir2@gmail.com>"]
edition = "2021"
description = "Simple Background Setter"
keywords = ["desktop", "wallpaper", "background", "cli"]
categories = ["Command line utilities"]
repository = "https://github.com/Nadji-abidi/kabegami"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
waraq = { path = "./waraq" }

[profile.release]
codegen-units = 1
strip = true
panic = "abort"
lto = true
