[package]
name = "kabegami"
version = "0.3.0"
authors = ["Nadji Abidi <mouhamir2@gmail.com>"]
edition = "2021"
description = "Simple Background Setter"
keywords = ["desktop", "wallpaper", "background", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/alliby/kabegami"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
argh = "0.1.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
infer = { version = "0.11.0", default-features = false }
rand = "0.8.5"
resize = "0.7.4"
rgb = "0.8.35"
directories = "5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12.0", features = ["image"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi" ] }

[profile.release]
codegen-units = 1
strip = true
panic = "abort"
lto = true
