[package]
name = "waraq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = { version = "0.11.0", default-features = false }
rand = "0.8.5"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.11.1", features = ["image"] }
