[package]
name = "waraq"
version = "0.1.1"
edition = "2021"
authors = ["Nadji Abidi <mouhamir2@gmail.com>"]
description = "Library for Setting Wallpapers"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
repository = "https://github.com/Nadji-abidi/kabegami/tree/main/waraq"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = { version = "0.11.0", default-features = false }
rand = "0.8.5"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
resize = "0.7.4"
rgb = "0.8.35"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.11.1", features = ["image"] }
