[package]
name = "waraq"
version = "0.2.0"
edition = "2021"
authors = ["Nadji Abidi <mouhamir2@gmail.com>"]
description = "Library for Setting Wallpapers"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
repository = "https://github.com/alliby/kabegami/tree/main/waraq"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.12.0", features = ["image"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation" ] }
